Added division to toggle-mode menu.

--- a/src/components/layouts/Header/Header.scss
+++ b/src/components/layouts/Header/Header.scss
@@ -6,6 +6,7 @@
     #theme-toggle {
         display: flex;
         align-items: center;
+        gap: 1rem;
 
         background-color: transparent;
         color: black;
