--- a/src/components/layouts/Profile/Profile.scss
+++ b/src/components/layouts/Profile/Profile.scss
@@ -1,14 +1,17 @@
 #profile {
-    //background-color: #1F2A48;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
 
-    padding: 2rem;
+    padding: 2rem 2rem 4rem;
 
     #top {
         display: flex;
+        align-items: center;
         gap: 1.5rem;
 
         img {
-            width: 20%;
+            width: 40%;
             height: 100%;
 
             border-radius: 100%;
@@ -16,27 +19,42 @@
 
         #username {
             color: #0d6efd;
+            text-decoration: none;
         }
     }
 
     #social {
         display: grid;
         grid-template-columns: auto auto auto;
-        gap: 2rem;
-
-        //background-color: #141C2F;
+        gap: 1rem;
 
         text-align: center;
 
         padding: 1rem 2rem;
         border-radius: 1rem;
+
+        .social {
+            * {
+                font-size: 1rem;
+            }
+        }
     }
 
     #contact {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+
         .contact {
             display: flex;
             gap: 1rem;
             align-items: center;
+
+            * {
+                font-size: 1rem;
+                margin-bottom: 0rem;
+                text-decoration: none;
+            }
         }
     }
 }
