Fixed image size for Tablet sizes.

--- a/src/styles/medias/Tablet.scss
+++ b/src/styles/medias/Tablet.scss
@@ -9,4 +9,8 @@
         display: grid;
         grid-template-columns: auto auto;
     }
+
+    .App #profile #top img {
+        width: 20%;
+    }
 }
