Fixed background-color of #social for light mode.

--- a/src/App.scss
+++ b/src/App.scss
@@ -18,6 +18,12 @@
     gap: 2rem;
 
     padding: 3rem 2rem 5rem;
+
+    #profile {
+        #social {
+            background-color: #F5F8FF;
+        }
+    }
 }
 
 .App.dark {
