Fixed view for:     - Not founded username.     - All data don't available.     - Initial view.

--- a/src/components/layouts/Profile/Profile.scss
+++ b/src/components/layouts/Profile/Profile.scss
@@ -5,6 +5,11 @@
 
     padding: 2rem 2rem 4rem;
 
+    .error {
+        text-align: center;
+        margin: 0rem;
+    }
+
     #top {
         display: flex;
         align-items: center;
