Fixed Profile view and style.

--- a/src/components/layouts/Profile/Profile.scss
+++ b/src/components/layouts/Profile/Profile.scss
@@ -5,6 +5,10 @@
 
     padding: 2rem 2rem 4rem;
 
+    #init {
+        text-align: center;
+    }
+
     .error {
         text-align: center;
         margin: 0rem;
