--- a/src/styles/medias/Tablet.scss
+++ b/src/styles/medias/Tablet.scss
@@ -1,6 +1,12 @@
 @media (min-width: 500px) {
+    #root {
+        display: flex;
+        align-items: flex-start;
+        justify-content: center;
+    }
+
     .App {
-        height: 100vh;
+        width: 90%;
 
         justify-content: center;
     }
